<resources>
    <string name="app_name">Bangabandhu Audiobook</string>
    <string name="play_now">Play now</string>
    <string name="_10s">10s</string>
    <string name="image">Image</string>
    <string name="audiobook">AudioBook</string>
    <string name="play_icon">play icon</string>
    <string name="added_by_ph">Added by %1$s</string>
    <string name="backward_button">Backward button</string>
    <string name="play_pause_button">Play pause button</string>
    <string name="forward_button">Forward button</string>
    <string name="_0_00_10_10">0:00/10:10</string>
    <string name="no_audiobook_found">No audiobook found\nCheck again later</string>
    <string name="icon">Icon</string>
    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="info">Info</string>
    <string name="explore_audio_books">Explore Audio Books</string>
    <string name="this_initiative_has_taken_by">This Initiative Has Taken By</string>
    <string name="rudranill_singha">Rudranill Singha</string>
    <string name="kuet">KUET</string>
    <string name="email">Email</string>
    <string name="engr_rnsingha_gmail_com">engr.rnsingha@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_8801838350104">+8801838350104</string>
    <string name="episodes">Episodes</string>
    <string name="info_dummy">In the lush fields of Bengal, a humble jomidar finds purpose and love, transcending societal barriers through acts of compassion and sacrifice. An inspiring tale of resilience, transformation, and the power of the human spirit.</string>
    <string name="select_a_playlist_from_home">Select a playlist from home</string>
    <string name="back_arrow">Back arrow</string>
    <string name="_00_00">00:00</string>
    <string name="_00_00_00_00">00:00/00:00</string>
</resources>
