<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/clPlaylistViewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/playlist_page_back">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dm_serif_display"
                android:text="@string/episodes"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="invisible"
                android:id="@+id/clTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="12dp">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivPlaylistThumbnail"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:elevation="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/list_thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeWidth="2dp" />


                <TextView
                    android:id="@+id/tvPlayListName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_serif_display"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivPlaylistThumbnail"
                    app:layout_constraintTop_toTopOf="@+id/ivPlaylistThumbnail"
                    tools:text="Asamapta Atmajibanee" />

                <TextView
                    android:id="@+id/tvPlayListDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="#BFA054"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivPlaylistThumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlayListName"
                    tools:text="@string/info_dummy" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.github.ybq.android.spinkit.SpinKitView
                android:visibility="gone"
                android:id="@+id/pbPlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:indeterminateTint="@color/green"
                app:SpinKit_Color="@color/white"
                app:SpinKit_Style="ThreeBounce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clTop" />

            <TextView
                android:id="@+id/tvNoBookFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_serif_display"
                android:text="@string/select_a_playlist_from_home"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rvItemsInList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clTop"
                app:layout_constraintVertical_bias="0.4" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItemsInList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clTop"
                app:reverseLayout="false"
                tools:itemCount="7"
                tools:listitem="@layout/audio_book_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="invisible"
            android:id="@+id/clPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivBackPlayer"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/back_arrow"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvPlayListNamePlayer"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPlayListNamePlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_serif_display"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Asampapta Atmajibanee" />

                <ImageView
                    android:id="@+id/ivMinimizePlayer"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/back_arrow"
                    android:src="@drawable/minimize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivPlaylistThumbnailPlayer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/list_thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".2"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeWidth="2dp" />

                <TextView
                    android:id="@+id/tvBookNamePlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/dm_serif_display"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivPlaylistThumbnailPlayer"
                    tools:text="Asamapta Atmajibanee: Ep01" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clController"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.85">

                    <SeekBar
                        android:id="@+id/seekBarPlayer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:progressDrawable="@drawable/seek_bar_controller_design_2"
                        android:thumb="@drawable/seek_bar_controller_thumb_2"
                        android:max="100"
                        android:progress="0"
                        android:theme="@style/SeekBarColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.3"
                        tools:progress="70" />

                    <TextView
                        android:id="@+id/tvPlayedPlayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/_00_00"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/seekBarPlayer"
                        app:layout_constraintTop_toBottomOf="@+id/seekBarPlayer" />

                    <TextView
                        android:id="@+id/tvTotalPlayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/_00_00"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/seekBarPlayer"
                        app:layout_constraintTop_toBottomOf="@+id/seekBarPlayer" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintVertical_bias="0.3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvPlayedPlayer">

                        <ImageView
                            android:id="@+id/ivPlayPrevious"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:contentDescription="@string/backward_button"
                            android:src="@drawable/icon_arrow_left"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ivPlayPause"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivPlayPause"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:contentDescription="@string/play_pause_button"
                            android:src="@drawable/baseline_play_circle_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ivPlayNext"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/ivPlayPrevious"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivPlayNext"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:contentDescription="@string/forward_button"
                            android:src="@drawable/icon_right_arrow"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/ivPlayPause"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
